updated ui for rankings page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
 
-    <title>Master of Java 2017</title>
+    <title>Masters of Java 2017</title>
 
     <link rel="stylesheet" th:href="@{/webjars/codemirror-minified/addon/hint/show-hint.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/codemirror-minified/lib/codemirror.css}"/>
