--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -13,23 +13,12 @@
 
 <body class="p-2">
 <div class="container-fluid">
-    <!-- header -->
-    <div class="row">
-        <div class="col d-flex justify-content-center">
-            <div>
-                <img th:src="@{/images/moj_logo_128x97_2017.png}" class="img-fluid"
-                     src="/static/images/moj_logo_128x97_2017.png"/>
-            </div>
-            <div class="pl-5 align-self-center">
-                <h1>Ranking</h1>
-            </div>
-
-        </div>
-    </div>
     <!-- content -->
-    <div class="row mt-2">
-
-        <div class="col-6">
+    <div class="row mt-3">
+        <div class="col-6 mt-4">
+            <div class="text-center">
+                <h3>Assignment: [[${assignment}]]</h3>
+            </div>
             <div class="p-2 d-flex justify-content-center">
                 <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time}"
                      class="align-self-center">
@@ -45,30 +34,42 @@
                     </svg>
                 </div>
             </div>
-
         </div>
         <div class="col-6">
-            <table id="top5" class="table">
-                <thead>
-                <tr>
-                    <th></th>
-                    <th>Team</th>
-                    <th th:each="assignment : ${assignments}" th:text="${assignment}"></th>
-                    <th>Total Score</th>
-                </tr>
-                </thead>
-                <tbody>
-                <!--/*@thymesVar id="top" type="java.util.List<nl.moj.server.model.Ranking>"*/-->
-                <tr th:each="ranking,status : ${top}" th:class="${'rank-'+status.index}">
-                    <td th:text="${ranking.rank}"></td>
-                    <td th:text="${ranking.team}">teamname</td>
-                    <th:block th:each="result : ${ranking.results}">
-                        <td th:text="${result.score}">0</td>
-                    </th:block>
-                    <td th:text="${ranking.totalScore}">3</td>
-                </tr>
-                </tbody>
-            </table>
+            <div class="row justify-content-center">
+                <div>
+                    <img th:src="@{/images/moj_logo_128x97_2017.png}" class="img-fluid"
+                         src="/static/images/moj_logo_128x97_2017.png"/>
+                </div>
+                <div class="pl-5 align-self-center">
+                    <h1>Ranking</h1>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col">
+                    <table id="top5" class="table">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th>Team</th>
+                            <th th:each="assignment : ${assignments}" th:text="${assignment}"></th>
+                            <th>Total Score</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <!--/*@thymesVar id="top" type="java.util.List<nl.moj.server.model.Ranking>"*/-->
+                        <tr th:each="ranking,status : ${top}" th:class="${'rank-'+status.index}">
+                            <td th:text="${ranking.rank}"></td>
+                            <td th:text="${ranking.team}">teamname</td>
+                            <th:block th:each="result : ${ranking.results}">
+                                <td th:text="${result.score}">0</td>
+                            </th:block>
+                            <td th:text="${ranking.totalScore}">3</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
