(player) after submit, shows success/failure and score for assignment

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -20,8 +20,9 @@
                     </ul>
                 </div>
                 <div id="conversationDiv">
-                    <button id="start" onclick="startTask();">Start Task</button>
-                    <button id="stop" onclick="stopTask();">Stop Task</button>
+                    <button id="start" onclick="startTask();">Start Assignment</button>
+                    <button id="stop" onclick="stopTask();">Stop Assignment</button>
+                    <button id="stop" onclick="clearAssignment();">Clear Current Assignment</button>
                 </div>
                 <div>
                     <ul>
