added country and company to register page and db

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -49,8 +49,8 @@
                 <div class="form-group">
                     <label for="country">Country</label>
                     <select th:field="*{country}" class="form-control">
-                      <option value="belgie" >Belgie</option>
-                      <option value="nederland" >Nederland</option>
+                      <option value="België" >België</option>
+                      <option value="Nederland" >Nederland</option>
                     </select>
                     <small id="countryHelp" class="form-text text-muted">Where are you?</small>
                 </div>
